--- a/example/demo/mvc/mvc.html
+++ b/example/demo/mvc/mvc.html
@@ -5,7 +5,7 @@
   <meta name="-webkit-tap-highlight" content="no" /> 
   <meta content="IE=9" http-equiv="x-ua-compatible" /> 
   <title>测试sun模块开发</title> 
-  <script type="text/javascript" src="../../assets/qmik-debug.all.js"></script>
+  <script type="text/javascript" src="../../../assets/qmik-debug.all.js"></script>
   <style type="text/css">
   	#result{
   		position: fixed;
