优化内存占用,减少50%的内存占用率

--- a/example/demo/mvc/taobao/taobao.html
+++ b/example/demo/mvc/taobao/taobao.html
@@ -2,7 +2,7 @@
 <html class="ks-webkit537 ks-webkit ks-chrome33 ks-chrome">
  <head> 
   <meta charset="utf-8" /> 
-  <title>qmik性能测试-淘宝首页源码</title> 
+  <title>qmik 性能测试</title> 
   <meta name="data-spm" content="1" /> 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /> 
   <link href="http://gtms03.alicdn.com/tps/i3/T1OjaVFl4dXXa.JOZB-114-114.png" rel="apple-touch-icon-precomposed" /> 
@@ -15,7 +15,7 @@
   </style> 
   <script type="text/javascript" src="../../../../assets/Qmik-debug.all.js"></script> 
  </head> 
- <body> 
+ <body style="visibility:hidden;"> 
   <div q-ctrl="nav" class="site-nav"> 
    <div class="site-nav-bd"> 
     <ul class="site-nav-bd-l"> 
@@ -233,8 +233,12 @@
         </div> 
        </div> 
       </div> 
+      <div class="logo s-logo"> 
+       <h1 class="J_Ald J_Ald_544" data-ald="544"><a href="//www.taobao.com" target="_self" class="logo-bd">宝宝网</a></h1> 
+       <h2><a href="//www.taobao.com" target="_self">宝宝网</a></h2> 
+      </div> 
       <div id="J_Qr" class="qr" style="display:none;"> 
-       <a href="http://www.taobao.com/m?spm=1.6723761.a2147az.1" class="qr-bd"> <span class="h">手机逛</span> <img src="http://gtms01.alicdn.com/tps/i1/TB1h3IXGFXXXXXsXFXXDANtWXXX-175-175.png" alt="手机逛宝宝" /> </a> 
+       <a href="http://www.taobao.com/m?spm=1.6723761.a2147az.1" class="qr-bd"> <span class="h">手机逛宝宝</span> <img src="http://gtms01.alicdn.com/tps/i1/TB1h3IXGFXXXXXsXFXXDANtWXXX-175-175.png" alt="手机逛宝宝" /> </a> 
        <a href="javascript:;" target="_self" id="J_QrFt" class="qr-ft"> 
         <s class="fpicon s-s-close"></s></a> 
       </div> 
@@ -245,14 +249,14 @@
       <div id="J_Nav" class="nav"> 
        <ul class="nav-hd"> 
         <li><a href="http://www.tmall.com/?spm=1.7281509.a214dau.1">猫</a></li> 
-        <li><a href="http://ju.taobao.com/?spm=1.7281509.a214dau.2">算</a></li> 
+        <li><a href="http://ju.taobao.com/?spm=1.7281509.a214dau.2">聚划算</a></li> 
         <li><a href="http://chaoshi.tmall.com/?spm=1.7281509.a214dau.3">超市</a></li> 
        </ul> 
        <ul class="nav-bd"> 
         <li class="pipe">|</li> 
-        <li><a href="http://trip.taobao.com/?spm=1.7281509.a214dau.4">百里旅行</a></li> 
+        <li><a href="http://trip.taobao.com/?spm=1.7281509.a214dau.4">阿里旅行</a></li> 
         <li><a href="http://sf.taobao.com/?spm=1.7281509.a214dau.5">司法拍卖</a></li> 
-        <li><a href="http://www.etao.com/?spm=1.7281509.a214dau.6&amp;tb_lm_id=t_zdh">淘淘</a></li> 
+        <li><a href="http://www.etao.com/?spm=1.7281509.a214dau.6&amp;tb_lm_id=t_zdh">一淘</a></li> 
         <li><a href="http://3c.tmall.com/?spm=1.7281509.a214dau.7">电器城</a></li> 
         <li class="J_Ald J_Ald_30080" data-ald="30080"><a href="http://www.taobao.com/go/chn/hitao/top.php?spm=1.7281509.a214dau.8">美妆闪购</a></li> 
         <li><a href="http://yun.taobao.com/?spm=1.7281509.a214dau.9">云智能</a></li> 
