--- a/example/demo/mvc/demo.html
+++ b/example/demo/mvc/demo.html
@@ -11,26 +11,119 @@
 </head>
 <body>
   <div>
-    <div class="box" q-ctrl="shopping">
+    <div class="box border1 bh" q-ctrl="shopping">
         <p class="ftitle"> demo
         </p>
         <ul>
           <li>
-            <span class="lt">名: </span><input name="user.shop.info.shopName" type="text" value="qmik"/>
-            <span class="lt">动态绑定:</span>[<span class="bind">${user.shop.info.shopName}</span>]
+            <span class="lt">名: </span><input name="shop.shopName" type="text" value="qmik"/>
+            <span class="lt">动态绑定:</span>[<span class="bind">${shop.shopName}</span>]
           </li>
           <li>
             <span class="lt">价: </span><input name="price" type="text" value="999"/>
             <span class="lt">动态绑定:</span>[<span class="bind">${price}</span>]
           </li>
         </ul>
+        <div  class="box border1 bh" border1>
+          <div >
+            <p class="ftitle"> h1 </p>
+            <p>shopName:  ${shop.shopName}</p>
+            <ul>
+              <li>
+                <span class="lt">数量: </span><input name="number" type="text" value="999"/>
+                <span class="lt">动态绑定:</span>[<span class="bind">${number}</span>]
+              </li>
+            </ul>
+          </div>
+          <br/>
+          <div class="box border1 bh">
+            <p class="ftitle"> h2 </p>
+            <p>shopName:  ${shop.shopName}</p>
+            <br/>
+            <div class="box border1 bh">
+              <p class="ftitle"> h3  </p>
+              <p>shopName:  ${shop.shopName}</p>
+              <p>数量:  ${number}</p>
+
+              <div class="box border1 bh">
+                <p class="ftitle"> h4 </p>
+                <p>shopName:  ${shop.shopName}</p>
+                <br/>
+                <div class="box border1 bh">
+                  <p class="ftitle"> h5  </p>
+                  <p>shopName:  ${shop.shopName}</p>
+                  <p>数量:  ${number}</p>
+                  <div class="box border1 bh">
+                    <p class="ftitle"> h6 </p>
+                    <p>shopName:  ${shop.shopName}</p>
+                    <br/>
+                    <div class="box border1 bh">
+                      <p class="ftitle"> h7  </p>
+                      <p>shopName:  ${shop.shopName}</p>
+                      <p>数量:  ${number}</p>
+                      <div class="box border1 bh">
+                        <p class="ftitle"> h8 </p>
+                        <p>shopName:  ${shop.shopName}</p>
+                        <br/>
+                        <div class="box border1 bh">
+                          <p class="ftitle"> h9  </p>
+                          <p>shopName:  ${shop.shopName}</p>
+                          <p>数量:  ${number}</p>
+                          <div class="box border1 bh">
+                            <p class="ftitle"> h10 </p>
+                            <p>shopName:  ${shop.shopName}</p>
+                            <br/>
+                            <div class="box border1 bh">
+                              <p class="ftitle"> h11  </p>
+                              <p>shopName:  ${shop.shopName}</p>
+                              <p>数量:  ${number}</p>
+                              <div class="box border1 bh">
+                                <p class="ftitle"> h12 </p>
+                                <p>shopName:  ${shop.shopName}</p>
+                                <br/>
+                                <div class="box border1 bh">
+                                  <p class="ftitle"> h13  </p>
+                                  <p>shopName:  ${shop.shopName}</p>
+                                  <p>数量:  ${number}</p>
+                                  <div class="box border1 bh">
+                                    <p class="ftitle"> h14 </p>
+                                    <p>shopName:  ${shop.shopName}</p>
+                                    <br/>
+                                    <div class="box border1 bh">
+                                      <p class="ftitle"> h15 </p>
+                                      <p>shopName:  ${shop.shopName}</p>
+                                      <p>数量:  ${number}</p>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
 
   <script type="text/javascript">
     //$.app() 编译并生成应用,$.app().ctrl()定义控制器
     $.app().ctrl({
       shopping: function(scope){//购物
-
+        console.log("shopping:", scope);
+      },
+      level1: function(scope){
+        console.log('level1:', scope)
+      },
+      level2: function(scope){
+        console.log('level2:', scope)
+      },
+      level3: function(scope){
+        console.log('level3:', scope)
       }
     });
     //
