--- a/example/demo/mvc/demo1.html
+++ b/example/demo/mvc/demo1.html
@@ -14,6 +14,7 @@
     <div class="box">      
       <p class="ftitle" > 全局控制(用户信息) </p>
       <ul>
+        <input name="cmd" />
         <li class=" q-hide">
           <span class="lt">用户名: </span><input name="user.userName" type="text" value="leo"/>
           <span class="lt">动态绑定:</span>[<span class="bind">${user.userName}</span>]
@@ -144,13 +145,10 @@
           scope.cssDisplay="xxx";//初始化的值需要事先声明
           scope.time = parseInt(ttl/1000);
           var startTime = $.now() + ttl;
-          scope.apply("time");
           $.cycle(function(){
             var t = startTime - $.now();
             scope.time = parseInt(t/1000);
-            scope.apply("time");//局部更新
           }, 900, ttl);
-          console.log(scope);
           $.delay(function(){
               scope.$(".load").hide();
               scope.cssDisplay = "none";
