--- a/example/demo/mvc/mobile/index.html
+++ b/example/demo/mvc/mobile/index.html
@@ -13,16 +13,14 @@
   <meta name="apple-mobile-web-app-capable" content="yes" /> 
   <meta name="format-detection" content="telephone=no" /> 
   <!--<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=2.0,user-scalable=no" /> -->
-  <meta name="viewport" content="width=device-width,initial-scale=${scale},minimum-scale=${scale},maximum-scale=2.0,user-scalable=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=2.0,user-scalable=no" />
   <meta content="yes" name="apple-mobile-web-app-capable" /> 
   <meta content="telephone=no" name="format-detection" /> 
   <link rel="stylesheet" type="text/css" href="index.css" /> 
-  <script src="../../../../assets/Qmik-debug.all.js"></script> 
-  <style>
-</style> 
+  <script src="../../../../assets/Qmik-debug.all.js?119"></script> 
  </head> 
  <body>
-  <div class="wrap" id="wrap" data-spm="$spm_module_id"> 
+  <div class="wrap" id="wrap">
 
    <div q-ctrl="model2002122" class="main"> 
       <div q-for="item in list" class="wap_block_style21 wblock">
@@ -31,6 +29,7 @@
          </a>      
       </div> 
    </div> 
+
    <div class="main">
     <div q-ctrl="model2002119" class="wap_block_style22 wblock">
       <a class="s22_left" href="${itemLeft.action}">
@@ -53,6 +52,7 @@
           </div>
         </div></div></div>
    </div> 
+
    <div class="main"> 
       <div q-ctrl="model2002111" class="wap_block_style23 wblock">
        <a href="http://www.tmall.com/wh/tpl/tmmyy-m-wh/index" style="display:block;">
@@ -84,6 +84,7 @@
        </a>
       </div>
    </div> 
+
    <div q-ctrl="model2002112" class="main"> 
       <div q-for="item in list" class="wap_block_style24 wblock">
        <div class="s24_c">
@@ -130,6 +131,7 @@
       </div>
    </div> 
   </div> 
-  <script type="text/javascript" src="index.js"></script> 
+  <script type="text/javascript" src="index.js?12">
+  </script> 
  </body>
 </html>
