--- a/example/demo/mvc/profile/index.html
+++ b/example/demo/mvc/profile/index.html
@@ -17,7 +17,7 @@
       position: relative;
     }
   </style> 
-  <script type="text/javascript" src="../../../../assets/Qmik-debug.all.js"></script> 
+  <script type="text/javascript" src="../../../../assets/Qmik-debug.all.js?11"></script> 
  </head> 
  <body style=""> 
   <div q-ctrl="nav" class="site-nav"> 
